update: rename names of the java projects

--- a/Enumeracoes_Composicao/.project
+++ b/Enumeracoes_Composicao/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>POO_Parte1_Section15_Tratamento_de_excecoes_ExerciseSolution</name>
+	<name>Enumeracoes_Composicao</name>
 	<comment></comment>
 	<projects>
 	</projects>
